# c-3d-renderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  buildThenRun.sh  default.nix  main.cpp  result  shell.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa
.direnv/flake-inputs/: 280a7a51rbsr8ckkplp321rcvcy0l4hp-source
OpenGLTest-main/: .gitignore  CMakeLists.txt  NOTICEME  flake.nix
OpenGLTest-main/include/glad/: glad.c  glad.h
OpenGLTest-main/shaders/: asteroid.vert  planet.vs  simple.frag  simple.vert
OpenGLTest-main/src/: main.cpp
OpenGLTest-main/src/App/: App.cpp  App.hpp
OpenGLTest-main/src/App/DemoGame/GameCamera/: GameCamera.cpp  GameCamera.hpp
OpenGLTest-main/src/App/DemoGame/GameEntity/: GameEntity.cpp  GameEntity.hpp
OpenGLTest-main/src/App/DemoGame/GameEntity/HitBox/: HitBox.cpp  HitBox.h
OpenGLTest-main/src/App/DemoGame/GameHandler/: GameHandler.cpp  GameHandler.hpp
OpenGLTest-main/src/App/DemoGame/GameLight/: GameLight.cpp  GameLight.hpp
OpenGLTest-main/src/App/DemoGame/GameModel/: GameModel.cpp  GameModel.hpp
OpenGLTest-main/src/App/DemoGame/GameReferenceHandler/: RefPreDec.hpp  ReferenceHandler.cpp  ReferenceHandler.hpp
OpenGLTest-main/src/App/DemoGame/GameReferenceHandler/Referee/: Referee.hpp
OpenGLTest-main/src/App/DemoGame/GameReferenceHandler/Reference/: Reference.hpp
OpenGLTest-main/src/App/DemoGame/GameShader/: GameShader.cpp  GameShader.hpp
OpenGLTest-main/src/App/EmbededModels/: ErrorModel.hpp
OpenGLTest-main/src/headers/CoreBackend/CoreEntity/: CoreEntity.cpp  CoreEntity.h
OpenGLTest-main/src/headers/CoreBackend/ErrorHandler/: ErrorHandler.cpp  ErrorHandler.hpp
OpenGLTest-main/src/headers/CoreBackend/GlfwHandler/: GlfwHandler.cpp  GlfwHandler.hpp
OpenGLTest-main/src/headers/CoreBackend/GlfwHandler/ImGuiHandler/: ImGuiHandler.cpp  ImGuiHandler.hpp
OpenGLTest-main/src/headers/CoreBackend/GlfwHandler/InputCallbackHandler/: InputHandler.cpp  InputHandler.hpp
OpenGLTest-main/src/headers/CoreBackend/GlfwHandler/WindowHandler/: WindowHandler.cpp  WindowHandler.hpp
OpenGLTest-main/src/headers/CoreBackend/GlfwHandler/WindowHandler/Window/: Window.cpp  Window.h
OpenGLTest-main/src/headers/CoreBackend/JsonExtractor/: JsonExtractor.cpp  JsonExtractor.h
OpenGLTest-main/src/headers/CoreBackend/RenderHandler/: RenderHandler.cpp  RenderHandler.h
OpenGLTest-main/src/headers/GraphicsBackend/Buffers/EBO/: EBO.cpp  EBO.h
OpenGLTest-main/src/headers/GraphicsBackend/Buffers/FBO/: FBO.cpp  FBO.h
OpenGLTest-main/src/headers/GraphicsBackend/Buffers/VAO/: VAO.cpp  VAO.h
OpenGLTest-main/src/headers/GraphicsBackend/Buffers/VBO/: VBO.cpp  VBO.h
OpenGLTest-main/src/headers/GraphicsBackend/Camera/: Camera.h
OpenGLTest-main/src/headers/GraphicsBackend/Light/: Light.hpp
OpenGLTest-main/src/headers/GraphicsBackend/Material/: Material.hpp
OpenGLTest-main/src/headers/GraphicsBackend/Mesh/: Mesh.cpp  Mesh.hpp
OpenGLTest-main/src/headers/GraphicsBackend/Model/: Model.cpp  Model.h
OpenGLTest-main/src/headers/GraphicsBackend/Shader/: Shaders.cpp  Shaders.h
OpenGLTest-main/src/headers/GraphicsBackend/Texture/: Texture.hpp
OpenGLTest-main/src/headers/GraphicsBackend/Vertex/: Vertex.h
examples/: build.nix
include/glad/: glad.h
src/: build.nix  glad.c  main.cpp
test/: flake.nix
test/.direnv/: flake-profile-3-link  flake-profile-4-link  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
test/.direnv/flake-inputs/: 4k6i9b6pvyajs7mz1jmcgm3azfa9136p-source  4sxqabakjckwngca6278axvhbg17jb41-source  l3amk5lsakpc93him5kry24kax23sn4h-source
test/examples/: build.nix  example-1.cpp  example-2.cpp  example-3.cpp  printer.h
test/src/: build.nix  main.cpp
